@@ -1,3 +1,10 @@
+2007-05-19  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_surface.c:
+	supported win32 surface. Thanks to Yoshinao Muramatsu!!!
+
+	* README: added entry for Yoshinao Muramatsu.
+
 2007-05-18  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_private.[ch] (rb_cairo__glyphs_to_array,
